# Realtime-Voice-Video-AI-GYM-Trainer-Mediapipe-AssemblYAI-Llamaa

./: .dockerignore  .gitignore  README.md  database.db  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
abstract_class/: base_exercise.py
assets/: style.css
detectors/: bicep_curl.py  lunges.py  pushup.py  shoulder_press.py  squat.py
docs/: ARCHITECTURE.md  BUILD_GUIDE.md  TECH_EXPLAINED.md  TECH_STACK.md
exercise_class/: bicep_curl.py  lunges.py  pushup.py  shoulder_press.py  squat.py
models/: __init__.py
pages/: workout.py
services/: exer-db.db
services/auth/: login_gate.py
services/coaching/: coach_llm.py  feedback_engine.py  feedback_pipeline.py  tts_service.py
services/config/: workout_config.py
services/legacy/: stt_assemblyai_pipeline.py
services/state/: session_defaults.py
services/tracking/: metrics_sync.py  workout_progress.py
services/vision/: exercise_video_processor.py
static/: style.css
utils/: audio_speech_to_text.py  auth.py  css_func.py  database.py  llm_handler.py  matrix_queue.py  reps_sets_exercise_hanlder.py  session_state.py  text_to_speech_audio.py  var.py  video_processor.py  voice_pipeline.py
