[project]
name = "realtime-voice-vision-exercise-multimodal-ai"
version = "0.1.0"
description = "realtime-voice-vision-exercise-multimodal-ai"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.54.0",
    "streamlit-webrtc>=0.64.5",
    "mediapipe>=0.10",
    "opencv-python-headless>=4.8",
    "av>=12.0.0",
    "pandas>=2.2.0",
    "groq>=0.12.0",
    "gtts>=2.5.3",
    "python-dotenv>=1.2.2",
]
